--- a/parlay/index/templates/par/add-book.html
+++ b/parlay/index/templates/par/add-book.html
@@ -4,12 +4,11 @@
 {% block title %} Add book {% endblock %}
 
 {% block content %}
-    <style>
-        .add-books{display:none;}
-    </style>
+
 
             <form class="form-group card" method="post">
                 {% csrf_token %}
+                <h4>За каждую новую добавленную книгу вы получите 5 <i class="fas fa-circle-notch"></i></h4>
                 <div class=" container-fluid d-flex flex-column align-items-center select-group ">
                 {% for field in form %}
                     {{ field.label_tag }}
