--- a/parlay/index/templates/par/add_wager.html
+++ b/parlay/index/templates/par/add_wager.html
@@ -7,6 +7,13 @@
     <form class="form-group card" method="post">
         {% csrf_token %}
         <div class=" container-fluid d-flex flex-column align-items-center select-group ">
+            {% if tm == 1 %}
+                <h3 class="red">Вы столько не потянете!</h3>
+            {% elif tm == 2 %}
+                <h3 class="red">Поставьте что-то!</h3>
+            {% elif tm == 3 %}
+                <h3 class="red"> Задайте длительность спора!</h3>
+            {% endif %}
             {% for field in form %}
 
             {{ field.label_tag }}
