--- a/parlay/index/templates/par/signup.html
+++ b/parlay/index/templates/par/signup.html
@@ -6,13 +6,13 @@
 <div id = "" class ="container-fluid  ">
   <h2 align="center">Sign up</h2>
   <style> .navigation{ display:none;}
-            body{ background:url('{% static 'img/memphis-colorful.png' %}') repeat;
+            body{
 
             }
             #container {background-color: #eee;
             position: absolute;
-            top: 20%;
-            height: 60%;
+            top: 15%;
+            height: 70%;
             width:100%;
             left:0;
             padding-top: 1%;
@@ -20,6 +20,9 @@
 
             box-shadow: 0 0 100px 15px #888;
             }
+
+            .footer{position:absolute;
+            bottom: 5%;}
 
   </style>
   <form method="post">
