--- a/parlay/index/templates/par/signup.html
+++ b/parlay/index/templates/par/signup.html
@@ -9,7 +9,7 @@
             body{
 
             }
-            #container {background-color: #eee;
+            #container {background: rgba(255,255,255,0.8);
             position: absolute;
             top: 15%;
             height: 70%;
