--- a/parlay/index/templates/par/signup.html
+++ b/parlay/index/templates/par/signup.html
@@ -11,10 +11,10 @@
             body{
 
             }
-            #container {background: rgba(255,255,255,0.8);
+            #container {background: rgba(255,255,255,0.5);
             position: absolute;
-            top: 10%;
-            height: 80%;
+            top:0%;
+            height: 40%;
             width:100%;
             left:0;
             padding-top: 1%;
@@ -24,7 +24,9 @@
             }
 
             .footer{position:absolute;
-            bottom: 0%;}
+            bottom: 0%;
+            color: #111;
+            }
 
   </style>
     <noscript>
