--- a/parlay/index/templates/par/parse-error.html
+++ b/parlay/index/templates/par/parse-error.html
@@ -7,13 +7,8 @@
     <br>
     <br>
     <br>
-    <style>
-    body{
-        background-size: 100% 300%;
-    }
-    </style>
     <div class="card">
-        <h4 class="display-4"> Данная книга уже добавлена или является аудиокнигой? Или может вы пытаетесь добавить её не с <a href="https://litres.ru" class="olive">litres.ru?</a> </h4>
+        <h4 class="text-center"> Данная книга уже добавлена или является аудиокнигой? Или может вы пытаетесь добавить её не с <a href="https://litres.ru" class="olive">litres.ru?</a> </h4>
 
     </div>
 
