--- a/parlay/staticfiles/css/style.css
+++ b/parlay/staticfiles/css/style.css
@@ -1,16 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Exo+2:300,400|Merriweather:300|Poppins:900i');
+html,body{
+    min-height: 100%;
+    height: auto;
+}
 body{
-    height:100%;
-    min-height: 400px;
     width:100%;
-    background:linear-gradient(217deg, rgba(0,255,0,.5), rgba(0,255,0,0) 70.71%),
+    background: linear-gradient(217deg, rgba(0,255,0,.5), rgba(0,255,0,0) 70.71%),
             linear-gradient(127deg, rgba(0,0,255,.5), rgba(0,0,255,0) 70.71%),
             linear-gradient(336deg, rgba(255,0,0,.5), rgba(255,0,0,0) 70.71%);
 
 
     font-family: 'Exo 2', sans-serif;
     font-weight: 300;
-
+    margin:0;
+    padding:0;
 
 
 }
@@ -68,7 +71,7 @@ body{
 }
 footer{
 
-    margin-top: 5%;
+    margin-top: 2%;
     padding:2%;
     width: 100%;
 }
@@ -247,7 +250,8 @@ a:hover{
     position:relative;
     top: 10%;
     width:100%;
-    height: 100%;
+    min-height: 100%;
+    height: auto;
     display: inline-flex;
     flex-direction: column;
     align-items: center;
